--- a/cinetrack-app/package.json
+++ b/cinetrack-app/package.json
@@ -11,7 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "idb": "^8.0.3",
+    "mongodb": "^6.8.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
