--- a/cinetrack-app/server/package.json
+++ b/cinetrack-app/server/package.json
@@ -4,8 +4,8 @@
   "description": "Backend server for the Scene Stack application.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
