--- a/cinetrack-app/client/package.json
+++ b/cinetrack-app/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "idb": "^8.0.3",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "scheduler": "^0.27.0",
+    "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
