--- a/cinetrack-app/server/package.json
+++ b/cinetrack-app/server/package.json
@@ -14,7 +14,8 @@
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
