more clear env setup

--- a/cinetrack-app/server/.env.example
+++ b/cinetrack-app/server/.env.example
@@ -4,10 +4,10 @@
 # MongoDB connection string (required)
 MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/scenestackDB
 
-# JWT secret for token signing (optional, has fallback)
+# JWT secret for token signing (not optional, no fallback) https://jwtsecrets.com/#generator
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
-# Comma-separated invite codes for registration (optional, default: SCENESTACK2024)
+# Comma-separated invite codes for registration (not optional, no defaults set)
 INVITE_CODES=SCENESTACK2024,FRIEND2024
 
 # Server port (optional, default: 3001)
