--- a/cinetrack-app/server/package.json
+++ b/cinetrack-app/server/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.8.0",
-    "socket.io": "^4.8.1"
+    "morgan": "^1.10.1",
+    "socket.io": "^4.8.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
