feat: Implement TMDB API proxy with Redis caching on the server to centralize requests and improve performance.

--- a/cinetrack-app/client/.env.example
+++ b/cinetrack-app/client/.env.example
@@ -1,7 +1,9 @@
 # Client Environment Variables
 # Copy this file to .env and fill in your values
 
-# TMDB API Read Access Token (required for movie/TV data)
+# TMDB API Read Access Token (required)
+# Used as fallback if backend proxy fails
+# Get one at: https://www.themoviedb.org/settings/api
 VITE_TMDB_API_READ_ACCESS_TOKEN=your_tmdb_api_read_access_token
 
 # API Base URL (optional, for development when server runs separately)
