--- a/cinetrack-app/server/package.json
+++ b/cinetrack-app/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.8.0",
     "morgan": "^1.10.1",
