feat: optimize watchlist with server-side pagination
Server:
- Add watchlistStatus field computed on item add/update
- New GET /by-status/:status endpoint with pagination and totalCount
- Add {userId, watchlistStatus} compound index

Client:
- ViewAllPage fetches pages on-demand with LRU cache

--- a/cinetrack-app/server/.env.example
+++ b/cinetrack-app/server/.env.example
@@ -17,7 +17,7 @@ PORT=3001
 # Get one at: https://www.themoviedb.org/settings/api
 TMDB_API_READ_ACCESS_TOKEN=your_tmdb_read_access_token
 
-# Redis URL (optional - caching disabled if not set)
+# Redis URL (recommended - caching disabled if not set)
 # Get a free Redis instance at: https://upstash.com/
 # use the TCP connection string
 REDIS_URL=rediss://default:your_password@your-instance.upstash.io:6379
