feat: add demo mode for portfolio showcase - Add separate MongoDB collections (demoUsers, demoWatchlist) with TTL indexes - Auto-delete demo accounts after configurable TTL.

--- a/cinetrack-app/server/.env.example
+++ b/cinetrack-app/server/.env.example
@@ -21,3 +21,9 @@ TMDB_API_READ_ACCESS_TOKEN=your_tmdb_read_access_token
 # Get a free Redis instance at: https://upstash.com/
 # use the TCP connection string
 REDIS_URL=rediss://default:your_password@your-instance.upstash.io:6379
+
+# Demo mode settings
+# Demo invite code (default: DEMONOW)
+DEMO_CODE=DEMONOW
+# Demo account TTL in seconds (default: 14400 = 4 hours)
+DEMO_TTL_SECONDS=14400
